[package]
name = "date_component"
version = "0.4.2"
authors = ["chenhan <gpgkd906@gmail.com>"]
edition = "2018"
license = "MIT"
description = "the missed date_component with chrono. calculate date interval with chrono."
homepage = "https://github.com/gpgkd906/date_component/"
repository = "https://github.com/gpgkd906/date_component/"
documentation = "https://gpgkd906.github.io/date_component/date_component/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"

[dev-dependencies]
test-case = "3.3"